--- a/subprojects/packagefiles/tesseract/overlay/meson.build
+++ b/subprojects/packagefiles/tesseract/overlay/meson.build
@@ -12,35 +12,9 @@ lept_dep = dependency('lept')
 cdata = configuration_data()
 
 cdata.set('GRAPHICS_DISABLED', true)
-cdata.set('HAVE_LIBLEPT', 1)
-
-foreach _header, _checks : {
-  'sys/types.h': {
-    'types': [
-      'off_t',
-    ],
-  },
-  'wchar.h': {
-    'types': ['wchar_t'],
-  },
-
-}
-  if _header != '' and not cxx.has_header(_header)
-    continue
-  endif
-  cdata.set('HAVE_' + _header.underscorify().to_upper(), 1)
-  _prefix = _header != '' ? f'#include<@_header@>' : ''
-  foreach _type : _checks.get('types', [])
-    if cxx.has_type(_type, prefix: _prefix)
-      cdata.set('HAVE_' + _type.underscorify().to_upper(), 1)
-    endif
-  endforeach
-  foreach _function : _checks.get('functions', [])
-    if cxx.has_function(_function, prefix: _prefix)
-      cdata.set('HAVE_' + _function.underscorify().to_upper(), 1)
-    endif
-  endforeach
-endforeach
+if not get_option('cube-engine')
+  cdata.set('NO_CUBE_BUILD', true)
+endif
 
 config_h = configure_file(
   input: 'config_auto.h.meson',
@@ -64,319 +38,293 @@ elif host_machine.system() == 'windows'
   compile_args += '-DWINDLLNAME="libtesseract.dll"'
 endif
 
-tesseract_src = (
-  [config_h] + files(
-    'api/baseapi.cpp',
-    'api/capi.cpp',
-    'api/pdfrenderer.cpp',
-    'api/renderer.cpp',
-  )
-)
+tesseract_inc = [
+  'api',
+  'ccmain',
+  'ccstruct',
+  'ccutil',
+  'classify',
+  'cutil',
+  'dict',
+  'neural_networks/runtime',
+  'opencl',
+  'textord',
+  'vs2010/port',
+  'viewer',
+  'wordrec',
+]
 
-foreach _prefix, _files : {
-  'ccmain': [
-    'adaptions.cpp',
-    'applybox.cpp',
-    'control.cpp',
-    'cubeclassifier.cpp',
-    'cube_control.cpp',
-    'cube_reco_context.cpp',
-    'docqual.cpp',
-    'equationdetect.cpp',
-    'fixspace.cpp',
-    'fixxht.cpp',
-    'ltrresultiterator.cpp',
-    'osdetect.cpp',
-    'output.cpp',
-    'pageiterator.cpp',
-    'pagesegmain.cpp',
-    'pagewalk.cpp',
-    'paragraphs.cpp',
-    'paramsd.cpp',
-    'par_control.cpp',
-    'pgedit.cpp',
-    'recogtraining.cpp',
-    'reject.cpp',
-    'resultiterator.cpp',
-    'superscript.cpp',
-    'tessbox.cpp',
-    'tessedit.cpp',
-    'tesseractclass.cpp',
-    'tesseract_cube_combiner.cpp',
-    'tessvars.cpp',
-    'tfacepp.cpp',
-    'thresholder.cpp',
-    'werdit.cpp',
-  ],
-  'ccstruct': [
-    'blamer.cpp',
-    'blobbox.cpp',
-    'blobs.cpp',
-    'blread.cpp',
-    'boxread.cpp',
-    'boxword.cpp',
-    'ccstruct.cpp',
-    'coutln.cpp',
-    'detlinefit.cpp',
-    'dppoint.cpp',
-    'fontinfo.cpp',
-    'genblob.cpp',
-    'imagedata.cpp',
-    'linlsq.cpp',
-    'matrix.cpp',
-    'mod128.cpp',
-    'normalis.cpp',
-    'ocrblock.cpp',
-    'ocrpara.cpp',
-    'ocrrow.cpp',
-    'otsuthr.cpp',
-    'pageres.cpp',
-    'params_training_featdef.cpp',
-    'pdblock.cpp',
-    'points.cpp',
-    'polyaprx.cpp',
-    'polyblk.cpp',
-    'publictypes.cpp',
-    'quadlsq.cpp',
-    'quspline.cpp',
-    'ratngs.cpp',
-    'rect.cpp',
-    'rejctmap.cpp',
-    'seam.cpp',
-    'split.cpp',
-    'statistc.cpp',
-    'stepblob.cpp',
-    'vecfuncs.cpp',
-    'werd.cpp',
-  ],
-  'ccutil': [
-    'ambigs.cpp',
-    'basedir.cpp',
-    'bits16.cpp',
-    'bitvector.cpp',
-    'ccutil.cpp',
-    'clst.cpp',
-    'elst2.cpp',
-    'elst.cpp',
-    'errcode.cpp',
-    'globaloc.cpp',
-    'indexmapbidi.cpp',
-    'mainblk.cpp',
-    'memry.cpp',
-    'params.cpp',
-    'scanutils.cpp',
-    'serialis.cpp',
-    'strngs.cpp',
-    'tessdatamanager.cpp',
-    'tprintf.cpp',
-    'unichar.cpp',
-    'unicharmap.cpp',
-    'unicharset.cpp',
-    'unicodes.cpp',
-    'universalambigs.cpp',
-  ],
-  'classify': [
-    'adaptive.cpp',
-    'adaptmatch.cpp',
-    'blobclass.cpp',
-    'classify.cpp',
-    'cluster.cpp',
-    'clusttool.cpp',
-    'cutoffs.cpp',
-    'errorcounter.cpp',
-    'featdefs.cpp',
-    'float2int.cpp',
-    'fpoint.cpp',
-    'intfeaturedist.cpp',
-    'intfeaturemap.cpp',
-    'intfeaturespace.cpp',
-    'intfx.cpp',
-    'intmatcher.cpp',
-    'intproto.cpp',
-    'kdtree.cpp',
-    'mastertrainer.cpp',
-    'mf.cpp',
-    'mfdefs.cpp',
-    'mfoutline.cpp',
-    'mfx.cpp',
-    'normfeat.cpp',
-    'normmatch.cpp',
-    'ocrfeatures.cpp',
-    'outfeat.cpp',
-    'picofeat.cpp',
-    'protos.cpp',
-    'sampleiterator.cpp',
-    'shapeclassifier.cpp',
-    'shapetable.cpp',
-    'tessclassifier.cpp',
-    'trainingsample.cpp',
-    'trainingsampleset.cpp',
-  ],
-  'cube': [
-    'altlist.cpp',
-    'beam_search.cpp',
-    'bmp_8.cpp',
-    'cached_file.cpp',
-    'char_altlist.cpp',
-    'char_bigrams.cpp',
-    'char_samp.cpp',
-    'char_samp_enum.cpp',
-    'char_samp_set.cpp',
-    'char_set.cpp',
-    'classifier_factory.cpp',
-    'con_comp.cpp',
-    'conv_net_classifier.cpp',
-    'cube_line_object.cpp',
-    'cube_line_segmenter.cpp',
-    'cube_object.cpp',
-    'cube_search_object.cpp',
-    'cube_tuning_params.cpp',
-    'cube_utils.cpp',
-    'feature_bmp.cpp',
-    'feature_chebyshev.cpp',
-    'feature_hybrid.cpp',
-    'hybrid_neural_net_classifier.cpp',
-    'search_column.cpp',
-    'search_node.cpp',
-    'tess_lang_mod_edge.cpp',
-    'tess_lang_model.cpp',
-    'word_altlist.cpp',
-    'word_list_lang_model.cpp',
-    'word_size_model.cpp',
-    'word_unigrams.cpp',
-  ],
-  'cutil': [
-    'bitvec.cpp',
-    'callcpp.cpp',
-    'cutil_class.cpp',
-    'cutil.cpp',
-    'danerror.cpp',
-    'efio.cpp',
-    'emalloc.cpp',
-    'freelist.cpp',
-    'listio.cpp',
-    'oldlist.cpp',
-    'structures.cpp',
-  ],
-  'dict': [
-    'context.cpp',
-    'dawg_cache.cpp',
-    'dawg.cpp',
-    'dict.cpp',
-    'hyphen.cpp',
-    'permdawg.cpp',
-    'stopper.cpp',
-    'trie.cpp',
-  ],
-  'neural_networks/runtime': [
-    'input_file_buffer.cpp',
-    'neural_net.cpp',
-    'neuron.cpp',
-    'sigmoid_table.cpp',
-  ],
-  'opencl': [
-    'openclwrapper.cpp',
-  ],
-  'textord': [
-    'alignedblob.cpp',
-    'baselinedetect.cpp',
-    'bbgrid.cpp',
-    'blkocc.cpp',
-    'blobgrid.cpp',
-    'ccnontextdetect.cpp',
-    'cjkpitch.cpp',
-    'colfind.cpp',
-    'colpartition.cpp',
-    'colpartitiongrid.cpp',
-    'colpartitionset.cpp',
-    'devanagari_processing.cpp',
-    'drawedg.cpp',
-    'drawtord.cpp',
-    'edgblob.cpp',
-    'edgloop.cpp',
-    'equationdetectbase.cpp',
-    'fpchop.cpp',
-    'gap_map.cpp',
-    'imagefind.cpp',
-    'linefind.cpp',
-    'makerow.cpp',
-    'oldbasel.cpp',
-    'pithsync.cpp',
-    'pitsync1.cpp',
-    'scanedg.cpp',
-    'sortflts.cpp',
-    'strokewidth.cpp',
-    'tabfind.cpp',
-    'tablefind.cpp',
-    'tablerecog.cpp',
-    'tabvector.cpp',
-    'textlineprojection.cpp',
-    'textord.cpp',
-    'topitch.cpp',
-    'tordmain.cpp',
-    'tospace.cpp',
-    'tovars.cpp',
-    'underlin.cpp',
-    'wordseg.cpp',
-    'workingpartset.cpp',
-  ],
-  'viewer': [
-    'scrollview.cpp',
-    'svmnode.cpp',
-    'svpaint.cpp',
-    'svutil.cpp',
-  ],
-  'wordrec': [
-    'associate.cpp',
-    'chop.cpp',
-    'chopper.cpp',
-    'drawfx.cpp',
-    'findseam.cpp',
-    'gradechop.cpp',
-    'language_model.cpp',
-    'lm_consistency.cpp',
-    'lm_pain_points.cpp',
-    'lm_state.cpp',
-    'outlines.cpp',
-    'params_model.cpp',
-    'pieces.cpp',
-    'plotedges.cpp',
-    'render.cpp',
-    'segsearch.cpp',
-    'tface.cpp',
-    'wordclass.cpp',
-    'wordrec.cpp',
-  ],
-}
-  foreach _entry : _files
-    tesseract_src += files(_prefix / _entry)
-  endforeach
-endforeach
+tesseract_src = [
+  'api/baseapi.cpp',
+  'api/capi.cpp',
+  'api/pdfrenderer.cpp',
+  'api/renderer.cpp',
+  'ccmain/adaptions.cpp',
+  'ccmain/applybox.cpp',
+  'ccmain/control.cpp',
+  'ccmain/docqual.cpp',
+  'ccmain/equationdetect.cpp',
+  'ccmain/fixspace.cpp',
+  'ccmain/fixxht.cpp',
+  'ccmain/ltrresultiterator.cpp',
+  'ccmain/osdetect.cpp',
+  'ccmain/output.cpp',
+  'ccmain/pageiterator.cpp',
+  'ccmain/pagesegmain.cpp',
+  'ccmain/pagewalk.cpp',
+  'ccmain/par_control.cpp',
+  'ccmain/paragraphs.cpp',
+  'ccmain/paramsd.cpp',
+  'ccmain/pgedit.cpp',
+  'ccmain/recogtraining.cpp',
+  'ccmain/reject.cpp',
+  'ccmain/resultiterator.cpp',
+  'ccmain/superscript.cpp',
+  'ccmain/tessbox.cpp',
+  'ccmain/tessedit.cpp',
+  'ccmain/tesseractclass.cpp',
+  'ccmain/tessvars.cpp',
+  'ccmain/tfacepp.cpp',
+  'ccmain/thresholder.cpp',
+  'ccmain/werdit.cpp',
+  'ccstruct/blamer.cpp',
+  'ccstruct/blobbox.cpp',
+  'ccstruct/blobs.cpp',
+  'ccstruct/blread.cpp',
+  'ccstruct/boxread.cpp',
+  'ccstruct/boxword.cpp',
+  'ccstruct/ccstruct.cpp',
+  'ccstruct/coutln.cpp',
+  'ccstruct/detlinefit.cpp',
+  'ccstruct/dppoint.cpp',
+  'ccstruct/fontinfo.cpp',
+  'ccstruct/genblob.cpp',
+  'ccstruct/imagedata.cpp',
+  'ccstruct/linlsq.cpp',
+  'ccstruct/matrix.cpp',
+  'ccstruct/mod128.cpp',
+  'ccstruct/normalis.cpp',
+  'ccstruct/ocrblock.cpp',
+  'ccstruct/ocrpara.cpp',
+  'ccstruct/ocrrow.cpp',
+  'ccstruct/otsuthr.cpp',
+  'ccstruct/pageres.cpp',
+  'ccstruct/params_training_featdef.cpp',
+  'ccstruct/pdblock.cpp',
+  'ccstruct/points.cpp',
+  'ccstruct/polyaprx.cpp',
+  'ccstruct/polyblk.cpp',
+  'ccstruct/publictypes.cpp',
+  'ccstruct/quadlsq.cpp',
+  'ccstruct/quspline.cpp',
+  'ccstruct/ratngs.cpp',
+  'ccstruct/rect.cpp',
+  'ccstruct/rejctmap.cpp',
+  'ccstruct/seam.cpp',
+  'ccstruct/split.cpp',
+  'ccstruct/statistc.cpp',
+  'ccstruct/stepblob.cpp',
+  'ccstruct/vecfuncs.cpp',
+  'ccstruct/werd.cpp',
+  'ccutil/ambigs.cpp',
+  'ccutil/basedir.cpp',
+  'ccutil/bits16.cpp',
+  'ccutil/bitvector.cpp',
+  'ccutil/ccutil.cpp',
+  'ccutil/clst.cpp',
+  'ccutil/elst.cpp',
+  'ccutil/elst2.cpp',
+  'ccutil/errcode.cpp',
+  'ccutil/globaloc.cpp',
+  'ccutil/indexmapbidi.cpp',
+  'ccutil/mainblk.cpp',
+  'ccutil/memry.cpp',
+  'ccutil/params.cpp',
+  'ccutil/scanutils.cpp',
+  'ccutil/serialis.cpp',
+  'ccutil/strngs.cpp',
+  'ccutil/tessdatamanager.cpp',
+  'ccutil/tprintf.cpp',
+  'ccutil/unichar.cpp',
+  'ccutil/unicharmap.cpp',
+  'ccutil/unicharset.cpp',
+  'ccutil/unicodes.cpp',
+  'ccutil/universalambigs.cpp',
+  'classify/adaptive.cpp',
+  'classify/adaptmatch.cpp',
+  'classify/blobclass.cpp',
+  'classify/classify.cpp',
+  'classify/cluster.cpp',
+  'classify/clusttool.cpp',
+  'classify/cutoffs.cpp',
+  'classify/errorcounter.cpp',
+  'classify/featdefs.cpp',
+  'classify/float2int.cpp',
+  'classify/fpoint.cpp',
+  'classify/intfeaturedist.cpp',
+  'classify/intfeaturemap.cpp',
+  'classify/intfeaturespace.cpp',
+  'classify/intfx.cpp',
+  'classify/intmatcher.cpp',
+  'classify/intproto.cpp',
+  'classify/kdtree.cpp',
+  'classify/mastertrainer.cpp',
+  'classify/mf.cpp',
+  'classify/mfdefs.cpp',
+  'classify/mfoutline.cpp',
+  'classify/mfx.cpp',
+  'classify/normfeat.cpp',
+  'classify/normmatch.cpp',
+  'classify/ocrfeatures.cpp',
+  'classify/outfeat.cpp',
+  'classify/picofeat.cpp',
+  'classify/protos.cpp',
+  'classify/sampleiterator.cpp',
+  'classify/shapeclassifier.cpp',
+  'classify/shapetable.cpp',
+  'classify/tessclassifier.cpp',
+  'classify/trainingsample.cpp',
+  'classify/trainingsampleset.cpp',
+  'cutil/bitvec.cpp',
+  'cutil/callcpp.cpp',
+  'cutil/cutil.cpp',
+  'cutil/cutil_class.cpp',
+  'cutil/danerror.cpp',
+  'cutil/efio.cpp',
+  'cutil/emalloc.cpp',
+  'cutil/freelist.cpp',
+  'cutil/oldlist.cpp',
+  'cutil/structures.cpp',
+  'dict/context.cpp',
+  'dict/dawg.cpp',
+  'dict/dawg_cache.cpp',
+  'dict/dict.cpp',
+  'dict/hyphen.cpp',
+  'dict/permdawg.cpp',
+  'dict/stopper.cpp',
+  'dict/trie.cpp',
+  'opencl/openclwrapper.cpp',
+  'textord/alignedblob.cpp',
+  'textord/baselinedetect.cpp',
+  'textord/bbgrid.cpp',
+  'textord/blkocc.cpp',
+  'textord/blobgrid.cpp',
+  'textord/ccnontextdetect.cpp',
+  'textord/cjkpitch.cpp',
+  'textord/colfind.cpp',
+  'textord/colpartition.cpp',
+  'textord/colpartitiongrid.cpp',
+  'textord/colpartitionset.cpp',
+  'textord/devanagari_processing.cpp',
+  'textord/drawedg.cpp',
+  'textord/drawtord.cpp',
+  'textord/edgblob.cpp',
+  'textord/edgloop.cpp',
+  'textord/equationdetectbase.cpp',
+  'textord/fpchop.cpp',
+  'textord/gap_map.cpp',
+  'textord/imagefind.cpp',
+  'textord/linefind.cpp',
+  'textord/makerow.cpp',
+  'textord/oldbasel.cpp',
+  'textord/pithsync.cpp',
+  'textord/pitsync1.cpp',
+  'textord/scanedg.cpp',
+  'textord/sortflts.cpp',
+  'textord/strokewidth.cpp',
+  'textord/tabfind.cpp',
+  'textord/tablefind.cpp',
+  'textord/tablerecog.cpp',
+  'textord/tabvector.cpp',
+  'textord/textlineprojection.cpp',
+  'textord/textord.cpp',
+  'textord/topitch.cpp',
+  'textord/tordmain.cpp',
+  'textord/tospace.cpp',
+  'textord/tovars.cpp',
+  'textord/underlin.cpp',
+  'textord/wordseg.cpp',
+  'textord/workingpartset.cpp',
+  'viewer/scrollview.cpp',
+  'viewer/svmnode.cpp',
+  'viewer/svpaint.cpp',
+  'viewer/svutil.cpp',
+  'wordrec/associate.cpp',
+  'wordrec/chop.cpp',
+  'wordrec/chopper.cpp',
+  'wordrec/drawfx.cpp',
+  'wordrec/findseam.cpp',
+  'wordrec/gradechop.cpp',
+  'wordrec/language_model.cpp',
+  'wordrec/lm_consistency.cpp',
+  'wordrec/lm_pain_points.cpp',
+  'wordrec/lm_state.cpp',
+  'wordrec/outlines.cpp',
+  'wordrec/params_model.cpp',
+  'wordrec/pieces.cpp',
+  'wordrec/plotedges.cpp',
+  'wordrec/render.cpp',
+  'wordrec/segsearch.cpp',
+  'wordrec/tface.cpp',
+  'wordrec/wordclass.cpp',
+  'wordrec/wordrec.cpp',
+  config_h,
+]
+
+if get_option('cube-engine')
+  tesseract_src += [
+    'ccmain/cube_control.cpp',
+    'ccmain/cube_reco_context.cpp',
+    'ccmain/cubeclassifier.cpp',
+    'ccmain/tesseract_cube_combiner.cpp',
+    'cube/altlist.cpp',
+    'cube/beam_search.cpp',
+    'cube/bmp_8.cpp',
+    'cube/cached_file.cpp',
+    'cube/char_altlist.cpp',
+    'cube/char_bigrams.cpp',
+    'cube/char_samp.cpp',
+    'cube/char_samp_enum.cpp',
+    'cube/char_samp_set.cpp',
+    'cube/char_set.cpp',
+    'cube/classifier_factory.cpp',
+    'cube/con_comp.cpp',
+    'cube/conv_net_classifier.cpp',
+    'cube/cube_line_object.cpp',
+    'cube/cube_line_segmenter.cpp',
+    'cube/cube_object.cpp',
+    'cube/cube_search_object.cpp',
+    'cube/cube_tuning_params.cpp',
+    'cube/cube_utils.cpp',
+    'cube/feature_bmp.cpp',
+    'cube/feature_chebyshev.cpp',
+    'cube/feature_hybrid.cpp',
+    'cube/hybrid_neural_net_classifier.cpp',
+    'cube/search_column.cpp',
+    'cube/search_node.cpp',
+    'cube/tess_lang_mod_edge.cpp',
+    'cube/tess_lang_model.cpp',
+    'cube/word_altlist.cpp',
+    'cube/word_list_lang_model.cpp',
+    'cube/word_size_model.cpp',
+    'cube/word_unigrams.cpp',
+    'neural_networks/runtime/input_file_buffer.cpp',
+    'neural_networks/runtime/neural_net.cpp',
+    'neural_networks/runtime/neuron.cpp',
+    'neural_networks/runtime/sigmoid_table.cpp',
+  ]
+  tesseract_inc += 'cube'
+endif
 
 tesseract_lib = library(
   'tesseract',
+  tesseract_src,
   dependencies: [lept_dep],
   gnu_symbol_visibility: 'inlineshidden',
-  include_directories: include_directories(
-    'api',
-    'ccmain',
-    'ccstruct',
-    'ccutil',
-    'classify',
-    'cube',
-    'cutil',
-    'dict',
-    'neural_networks/runtime',
-    'opencl',
-    'textord',
-    'vs2010/port',
-    'viewer',
-    'wordrec',
-  ),
+  include_directories: include_directories(tesseract_inc),
   cpp_args: compile_args,
   install: true,
   soversion: 3,
-  sources: tesseract_src,
 )
 
 tesseract_dep = declare_dependency(
